Fixed video and carousal

--- a/index.html
+++ b/index.html
@@ -253,12 +253,10 @@ footer {
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
-                        <div class="card p-3 text-light">
-                            <a href="" target="_blank">
+                        <div class="card p-3 text-light">                         
                                 <video class="certi-card mb-3" autoplay loop muted playsinline>
                                     <source src="videos/Dataanalysis.mp4" type="video/mp4">
-                                </video>
-                            </a>
+                                </video>                         
                             <h5 class="mt-2">Udemy - Data Analyst Bootcamp - In progress</h5>
                             <p>
                                 Pursuing a practical job simulation on forensic technology and data analysis and
@@ -316,7 +314,7 @@ footer {
                                     <img src="image/Project1.png" class="d-block w-100" alt="Project1 Image 1">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="image/Projectslide1.png" class="d-block w-100" alt="Project1 Image 2">
+                                    <img src="image/ProjectCarousal1.png" class="d-block w-100" alt="Project1 Image 2">
                                 </div>
                             </div>
                         </div>
@@ -342,7 +340,7 @@ footer {
                                     <img src="image/Project2.png" class="d-block w-100" alt="Project2 Image 1">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="image/Projectslide2.png" class="d-block w-100" alt="Project2 Image 2">
+                                    <img src="image/ProjectCarousal2.png" class="d-block w-100" alt="Project2 Image 2">
                                 </div>
                             </div>
                         </div>
@@ -368,7 +366,7 @@ footer {
                                     <img src="image/Project3.png" class="d-block w-100" alt="Project1 Image 1">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="image/Projectslide3.png" class="d-block w-100" alt="Project1 Image 2">
+                                    <img src="image/ProjectCarousal3.png" class="d-block w-100" alt="Project1 Image 2">
                                 </div>
                             </div>
                         </div>
@@ -397,7 +395,7 @@ footer {
                                 <img src="image/Project4.png" class="d-block w-100" alt="Project4 Image 1">
                             </div>
                             <div class="carousel-item">
-                                <img src="image/Projectslide4.png" class="d-block w-100" alt="Project4 Image 2">
+                                <img src="image/ProjectCarousal4.png" class="d-block w-100" alt="Project4 Image 2">
                             </div>
                         </div>
                     </div>
