--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ footer {
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <div class="card p-3 text-light">                         
-                                <video class="certi-card mb-3" autoplay loop muted playsinline>
+                                <video class="certi-card mb-3" autoplay loop muted playsinline controls>
                                     <source src="videos/Dataanalysis.mp4" type="video/mp4">
                                 </video>                         
                             <h5 class="mt-2">Udemy - Data Analyst Bootcamp - In progress</h5>
